<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:src="@drawable/checked"/>
    <TextView
        android:id="@+id/tvCDialogInfo"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Correct date!"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCDialogDone"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OK"
        android:backgroundTint="#036BDA"/>
</LinearLayout>